fixes styles on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,7 @@ picture {
   text-transform: uppercase;
   letter-spacing: 0.5em;
   font-weight: 600;
+  color: black;
 }
 
 .shop-btn:hover {
@@ -114,7 +115,7 @@ picture {
 
 .about-img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   object-fit: cover;
 }
 
@@ -166,11 +167,12 @@ picture {
     grid-column: 1;
     grid-row: 3;
     grid-template-columns: 1fr;
-    
+    width: 100%;
   }
 
   .about-content {
     padding: 3.125rem 1.25rem;
+    width: 100%;
   }
 
   .about-title {
